# JobConnectPro

./: .replit  auth.py  database.py  main.py  models.py  pyproject.toml  run_python_server.py  schemas.py
client/src/: App.tsx  index.css
client/src/components/auth/: login-modal.tsx  signup-modal.tsx
client/src/components/jobs/: create-job-modal.tsx
client/src/components/layout/: navbar.tsx
client/src/hooks/: use-auth.tsx
client/src/lib/: auth.ts  queryClient.ts
client/src/pages/: agency-dashboard.tsx  candidate-dashboard.tsx  company-dashboard.tsx  landing.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
